# pipnn

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  env-guide.md  feature-list.json  init.ps1  init.sh  long-task-guide.md  remote.env.example  task-progress.md
docs/plans/: 2026-03-12-feature-1-cli-closure.md  2026-03-12-feature-1-cli-hardening.md  2026-03-12-feature-11-benchmark-matrix.md  2026-03-12-feature-12-recall-threshold.md  2026-03-12-feature-13-reproducibility.md  2026-03-12-feature-14-coverage-workflow.md  2026-03-12-feature-15-mutation-evidence.md  2026-03-12-feature-16-remote-mull-toolchain.md  2026-03-12-feature-17-remote-targeted-mutation-pipeline.md  2026-03-12-feature-18-scored-mutation-evidence.md  2026-03-12-feature-19-hashprune-fidelity.md  2026-03-12-feature-20-rbc-fidelity.md  2026-03-12-pipnn-poc-design.md  2026-03-12-pipnn-poc-srs.md  2026-03-12-st-plan.md  2026-03-12-st-report.md
docs/runbooks/: mutation-evidence.md  pipnn-on-vamana.md  quality-evidence.md
docs/superpowers/plans/: 2026-03-11-pipnn-poc.md  2026-03-12-feature-21-leaf-knn-blocked.md  2026-03-12-high-dim-validation.md  2026-03-12-leaf-knn-exact-batching.md  2026-03-12-multi-leaf-knn-batching.md  2026-03-12-mutation-scoring.md  2026-03-12-rbc-overlap-shortlist.md  2026-03-12-rbc-partition-batching.md  2026-03-13-pipnn-on-vamana.md
docs/superpowers/specs/: 2026-03-11-pipnn-poc-design.md  2026-03-12-feature-21-leaf-knn-blocked-design.md  2026-03-12-high-dim-validation-design.md  2026-03-12-leaf-knn-exact-batching-design.md  2026-03-12-multi-leaf-knn-batching-design.md  2026-03-12-mutation-scoring-design.md  2026-03-12-rbc-overlap-shortlist-design.md  2026-03-12-rbc-partition-batching-design.md  2026-03-12-wave4-algorithm-iteration-design.md  2026-03-13-pipnn-on-vamana-design.md
docs/test-cases/: feature-1-cli-parameter-routing.md  feature-11-benchmark-matrix.md  feature-12-recall-threshold.md  feature-13-reproducibility.md  feature-14-coverage-workflow.md  feature-15-mutation-evidence.md  feature-16-remote-mull-toolchain.md  feature-17-remote-targeted-mutation-pipeline.md  feature-18-scored-mutation-evidence.md
examples/: README.md  feature-1-cli-parameter-routing.sh  feature-11-benchmark-matrix.sh  feature-12-recall-threshold.sh  feature-13-reproducibility.sh  feature-14-coverage-workflow.sh  feature-15-mutation-evidence.sh  feature-16-remote-mull-toolchain.sh  feature-17-remote-targeted-mutation-pipeline.sh  feature-18-scored-mutation-evidence.sh
results/: feature12_100k_beam384.json  feature12_200k_beam384.json  feature12_500k_beam384.json  hnsw_metrics.json  pipnn_metrics.json  pipnn_vs_hnsw_sift1m.md  repro_manifest.json
results/bench_500k_100_subset/: hnsw_metrics.json  pipnn_metrics.json
results/feature19_100k_200/: pipnn.stdout  pipnn_metrics.json
results/feature20_100k_200/: pipnn.stdout  pipnn_metrics.json
results/feature20_f2_r1_100k_200_v3/: pipnn.stdout  pipnn_metrics.json
results/feature20_f2_r1_10k_200_v2/: pipnn.stdout  pipnn_metrics.json
results/high_dim_validation/: README.md
results/high_dim_validation/hnsw_sweep_20k_100_match_v1/: summary.tsv  (+11 more)
results/openai_arxiv_probe/: candidates.txt  files.txt  headers.txt  sync.txt
results/st/: branch_coverage.txt  exploratory_exit_codes.txt  feature11_example.txt  feature12_example.txt  feature13_example.txt  help.txt  hnsw_synth.json  hnsw_synth.stdout  line_coverage.txt  line_coverage_error.txt  missing.stdout  mutation_probe_local.txt  mutation_report.json  mutation_survivors.txt  pipnn_synth.json  pipnn_synth.stdout  remote_ctest.txt  security_scan.txt  unsupported.stdout
results/wikipedia_cohere_1m_100_ip/: pipnn_vamana_metrics.json  proc_snapshot.txt
results/wikipedia_cohere_1m_100_ip_hnsw/: hnsw_metrics.json
scripts/: check_configs.py  check_devtools.py  check_real_tests.py  check_st_readiness.py  get_tool_commands.py  validate_features.py  validate_guide.py  validate_increment_request.py  validate_mutation_evidence.py  validate_quality_evidence.py  validate_repro_manifest.py  validate_st_cases.py
scripts/bench/: probe_openai_arxiv_format.sh  probe_openai_arxiv_format_remote.py  remote_bench_sift1m.sh  remote_probe_diskann_cpp_main.sh  reuse_knowhere_remote_env.sh  run_feature19_hashprune_100k_200.sh  run_feature20_rbc_100k_200.sh  run_hnsw_match_sweep_20k_100_v1.sh  run_simplewiki_openai_20k_100.sh  run_wikipedia_cohere_1m_100_pipnn_vamana.sh  run_wikipedia_cohere_1m_full.sh  run_with_proc_monitor.sh  sweep_hnsw_20k_100.sh  tune_pipnn_grid.sh
scripts/quality/: aggregate_mutation_reports.py  ensure_remote_mull_build_compiler.sh  ensure_remote_mull_toolchain.sh  mull.yml  remote_coverage.sh  remote_coverage_inner.sh  remote_mull_toolchain_smoke.sh  remote_mull_toolchain_smoke_inner.sh  remote_mutation_probe.sh  remote_mutation_probe_inner.sh  remote_mutation_run.sh  remote_mutation_run_inner.sh
src/: main.cpp
src/baseline/: hnsw_runner.cpp  hnsw_runner.h
src/bench/: runner.cpp  runner.h
src/candidates/: pipnn_candidate_generator.cpp  pipnn_candidate_generator.h
src/cli/: app.cpp  app.h
src/common/: timer.h  types.h
src/core/: distance.h  graph.h  hashprune.cpp  hashprune.h  leaf_candidates.cpp  leaf_candidates.h  leaf_knn.cpp  leaf_knn.h  leaf_knn_blocked.cpp  leaf_knn_blocked.h  pipnn_builder.cpp  pipnn_builder.h  rbc.cpp  rbc.h  rbc_assignment.cpp  rbc_assignment.h
src/data/: sift_reader.cpp  sift_reader.h
src/refine/: vamana_refiner.cpp  vamana_refiner.h
src/search/: greedy_beam.cpp  greedy_beam.h  vamana_search_adapter.cpp  vamana_search_adapter.h
tests/: CMakeLists.txt  test_cli.cpp  test_cli_app.cpp  test_distance.cpp  test_hashprune.cpp  test_hnsw_runner.cpp  test_leaf_candidates.cpp  test_leaf_knn.cpp  test_mutation_evidence.cpp  test_mutation_report_aggregator.cpp  test_pipnn_candidate_generator.cpp  test_pipnn_integration.cpp  test_quality_evidence.cpp  test_rbc.cpp  test_real_test_harness.cpp  test_remote_toolchain.cpp  test_runner_metrics.cpp  test_sift_reader.cpp  test_vamana_refiner.cpp  test_vamana_search_adapter.cpp
(+42 files in other folders)
